[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/Minion/enemy/Big_Cherv_Pidr.gd" type="Script" id=1]
[ext_resource path="res://scenes/Minion/Healthbar.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Minion/Enemy/Equipment/spider_jaw.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Minion/timers.tscn" type="PackedScene" id=4]

[sub_resource type="BoxShape" id=1]

[sub_resource type="CylinderMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.321569, 0.129412, 0, 1 )

[sub_resource type="BoxShape" id=4]

[sub_resource type="BoxShape" id=5]

[node name="Cherv_pidr" type="KinematicBody" groups=[
"ChervPidr",
"Enemy",
]]
transform = Transform( 3, 0, 0, 0, 2, 0, 0, 0, 3, 0, 1, 0 )
script = ExtResource( 1 )
max_health = 200
weapon = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 0.7, 0, 0, 0, 1, 0, 0, 0, 0.7, 0, 0, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="hitbox" type="Area" parent="."]
input_ray_pickable = false
angular_damp = 1.0

[node name="CollisionShape" type="CollisionShape" parent="hitbox"]
shape = SubResource( 4 )

[node name="agro_zone" type="Area" parent="."]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0.515713, 0 )
input_ray_pickable = false
angular_damp = 1.0

[node name="CollisionShape" type="CollisionShape" parent="agro_zone"]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0, 0 )
shape = SubResource( 5 )

[node name="attack_zone" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.515713, 0 )
input_ray_pickable = false
angular_damp = 1.0

[node name="CollisionShape" type="CollisionShape" parent="attack_zone"]
transform = Transform( 2.5, 0, 0, 0, 1, 0, 0, 0, 2.5, 0, 0, 0 )
shape = SubResource( 5 )

[node name="PositionWeapon" type="Position3D" parent="."]
transform = Transform( 0.0589055, 0, -0.998263, 1.49613, 0.0609727, 0.0882837, 0.0315307, -0.665945, 0.00186056, 0.0203276, 1.25026, 0.00209371 )

[node name="Healthbar" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.36354, 0 )

[node name="borrowTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="cooldownBorrow" type="Timer" parent="."]
wait_time = 12.0

[node name="flyborrowTimer" type="Timer" parent="."]
wait_time = 1.2
one_shot = true

[node name="flyTimer" type="Timer" parent="."]
wait_time = 1.2
one_shot = true

[node name="RunTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="Run" type="Timer" parent="."]
wait_time = 12.0
one_shot = true

[node name="CanRunTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="timers" parent="." instance=ExtResource( 4 )]

[node name="RayCast" type="RayCast" parent="."]
[connection signal="body_entered" from="agro_zone" to="." method="_on_agro_zone_body_entered"]
[connection signal="body_exited" from="agro_zone" to="." method="_on_agro_zone_body_exited"]
[connection signal="body_entered" from="attack_zone" to="." method="_on_attack_zone_body_entered"]
[connection signal="body_exited" from="attack_zone" to="." method="_on_attack_zone_body_exited"]
[connection signal="timeout" from="borrowTimer" to="." method="_on_borrowTimer_timeout"]
[connection signal="timeout" from="cooldownBorrow" to="." method="_on_cooldownBorrow_timeout"]
[connection signal="timeout" from="flyborrowTimer" to="." method="_on_flyborrowTimer_timeout"]
[connection signal="timeout" from="flyTimer" to="." method="_on_flyTimer_timeout"]
[connection signal="timeout" from="RunTimer" to="." method="_on_RunTimer_timeout"]
[connection signal="timeout" from="Run" to="." method="_on_Run_timeout"]
[connection signal="timeout" from="CanRunTimer" to="." method="_on_CanRunTimer_timeout"]
[connection signal="timeout" from="timers/timeFlaming" to="." method="_on_timeFlaming_timeout"]
[connection signal="timeout" from="timers/max_flame_secondTimer" to="." method="_on_max_flame_secondTimer_timeout"]
[connection signal="timeout" from="timers/StunTimer" to="." method="_on_StunTimer_timeout"]
[connection signal="timeout" from="timers/can_StunTimer" to="." method="_on_can_StunTimer_timeout"]
[connection signal="timeout" from="timers/SlowTimer" to="." method="_on_SlowTimer_timeout"]
[connection signal="timeout" from="timers/rootTimer" to="." method="_on_rootTimer_timeout"]

[editable path="timers"]
